[package]
name = "edifact-types-macros"
version = "0.3.1"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>", "Alexander Kunde <alexander@apimeister.com>"]
license = "MIT OR Apache-2.0"
keywords = ["edi","edifact"]
repository = "https://github.com/apimeister/edifact-types-macros/"
documentation = "https://docs.rs/edifact-types-macros/"
description = "Macros for edifact-types."

[lib]
proc-macro = true
name = "edifact_types_macros"

[features]
default = []
debug = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
rustversion = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
